fix vertical scroll arrow being offscreen

--- a/frontend/src/components/http_cycle_viewer/stylesheet.styl
+++ b/frontend/src/components/http_cycle_viewer/stylesheet.styl
@@ -4,7 +4,6 @@
   height: 100%
   display: block
   overflow: auto
-  margin: 10px
 
 .flex-area
   display: flex // or maybe inline-flex
